--- a/css/index.css
+++ b/css/index.css
@@ -28,9 +28,6 @@ nav ul li{
   font-size: 25px;
   border-radius: 15px;
 }
-nav ul li::after{
-  transition: 1s;
-}
 nav ul li:hover{
   transition: 1s;
   background-color: #aa0000;
@@ -70,19 +67,92 @@ nav ul li a{
   padding-bottom: 10px;
 }
 .box p{
+  font-size: 17px;
   text-align: center;
 }
 #box-nomargin{
   margin-left: 5%;
 }
+.regimentarea{
+  color: red
+}
+.regimentarea:hover{
+  color: lightblue;
+}
 /*Footer*/
 footer{
-  margin-top: 550px;
-  background-color: #3f3f3f;
-  height: 50px;
-  color: white;
-  text-align: center;
+  width: 100%;
+  height: 100px;
 }
-footer p{
-  padding-top: 15px;
+@media only screen and (max-width: 1600px) {
+  nav ul li{
+    margin-left: 27%;
+  }
+}
+@media only screen and (max-width: 1100px) {
+  nav ul li{
+    margin-left: 19%;
+  }
+  .box{
+    width: 40%;
+  }
+  #server-box{
+    position: absolute;
+    margin-top: 50%;
+    margin-left: 19%;
+  }
+}
+@media only screen and (max-width: 800px) {
+  nav ul li{
+    margin-left: 5%;
+  }
+  .box{
+    float: none;
+    width: 70%;
+  }
+  #roleplay-box{
+    margin-left: 13%;
+  }
+  #staff-box{
+    margin-left: 13%;
+    margin-top: 5%;
+  }
+  #server-box{
+    margin-top: 6%;
+    width: 56%;
+    margin-left: 10%;
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  nav{
+    margin-left: 7%;
+  }
+  nav ul li{
+    padding: 2px 5px 5px 5px;
+    margin-left: 4%;
+    border-radius: 5px;
+  }
+  nav ul li a{
+    font-size: 15px;
+  }
+  .box{
+    float: none;
+    width: 80%;
+  }
+  .box img{
+    height: 200px;
+  }
+  #roleplay-box{
+    margin-left: 7%;
+  }
+  #staff-box{
+    margin-left: 7%;
+    margin-top: 5%;
+  }
+  #server-box{
+    margin-top: 6%;
+    width: 64%;
+    margin-left: 6%;
+  }
 }
