--- a/css/regimentarea.css
+++ b/css/regimentarea.css
@@ -5,46 +5,123 @@
   cursor: url('../aero-red.cur'), default;
 }
 body{
-  color: white;
   background-color: #2b2b2b;
 }
 .content{
   width: 80%;
+  background-color: white;
+  height: 800px; // Temporary
 }
 /*Header*/
 header{
   width: 100%;
   height: 40px;
   background-color: #3a3a3a;
-  border-bottom-left-radius: 5px;
-  border-bottom-right-radius: 5px;
 }
-
-h1{
-  transition: 1s;
+header h1{
+  color: white;
   float: left;
-  margin-left: 5px;
-  margin-top: 2px;
+  margin-left: 10px;
+  margin-top: 4px;
+  font-family: Helvetica;
+  font-size: 28px;
 }
-
 nav{
   float: right;
   margin-right: 20px;
-  margin-top: 8px;
+  margin-top: 10px;
 }
-
 nav ul li{
   float: left;
   list-style: none;
   margin-left: 10px;
 }
-
 nav ul li a{
   color: white;
   text-decoration: none;
   font-size: 20px;
 }
-
 nav ul li a:hover{
   box-shadow: 0px 2px white;
+  transition: 0.3s;
+}
+/*Regiments*/
+#usmc{
+  margin-right: 0;
+  float: left;
+  margin-left: 3%;
+  margin-top: 5%;
+  width: 30%;
+  margin-right: 3%;
+}
+#usmc div{
+}
+#usmc h1{
+  text-align: center;
+  font-size: 30px;
+}
+#usmc img{
+  border-radius: 10px;
+}
+#usmc p{
+  text-align: center;
+  font-size: 16px;
+  width: 75%;
+}
+#usmc a{
+  color: black;
+  text-decoration: none;
+}
+#usmc:hover{
+  box-shadow: 2px 2px 2px 2px gray;
+  transition: 0.5s;
+}
+#mp{
+  float: left;
+  margin-right: 3%;
+  margin-top: 5%;
+  width: 30%;
+}
+#mp h1{
+  text-align: center;
+  font-size: 30px;
+}
+#mp a{
+  color: black;
+  text-decoration: none;
+}
+#mp p{
+  width: 75%;
+}
+#mp img{
+  border-radius: 5px;
+}
+#mp:hover{
+  box-shadow: 2px 2px 2px 2px gray;
+  transition: 0.5s;
+}
+#srr{
+  margin-right: 0;
+  float: left;
+  margin-top: 4%;
+  width: 30%;
+}
+#srr h1{
+  text-align: center;
+  font-size: 25px;
+}
+#srr a{
+  color: black;
+  text-decoration: none;
+}
+#srr:hover{
+  box-shadow: 2px 2px 2px 2px gray;
+  transition: 0.5s;
+}
+#srr p{
+  text-align: center;
+  width: 75%;
+}
+#srr img{
+  border-radius: 5px;
 }
